# AutoTuner

./: .gitignore  README.md  sdkconfig
main/: CMakeLists.txt  idf_component.yml
main/html/: index.html
main/include/: analog_sound_handler.h  button_handler.h  controller.h  i2s_sound_handler.h  led_handler.h  network_handler.h  servo_handler.h  sound_handler_base.h  tuning_handler.h
main/src/: analog_sound_handler.cpp  button_handler.cpp  controller.cpp  html.cpp  i2s_sound_handler.cpp  led_handler.cpp  main.cpp  network_handler.cpp  servo_handler.cpp  sound_handler_base.cpp  tuning_handler.cpp
stl/doboz/: c.stl  gomb tarto.stl  ledkupak.stl
stl/gearbox/gears/: MOTORRA.stl  middle_gear.stl  tuning_peg_gear.stl
stl/gearbox/lapok/: lap1.stl  lap2.stl  lap3.stl  lap4.stl  motor_leszorito_lap.stl  tavtarto4db.stl  tavtarto8db.stl
